--- a/configs/dhcpd.conf
+++ b/configs/dhcpd.conf
@@ -1,3 +1,7 @@
+# Primero, define la clave de seguridad para que el resto del archivo la conozca
+include "/etc/dhcp/ddns.key";
+
+# Ahora, el resto de la configuración
 log-facility local7;
 
 ddns-update-style interim;
@@ -10,9 +14,10 @@ max-lease-time 7200;
 option domain-name "example.test";
 option domain-name-servers 192.168.58.10;
 
-subnet 192.168.58.0 netmask 25255.255.0 {
+subnet 192.168.58.0 netmask 255.255.255.0 {
     range 192.168.58.100 192.168.58.200;
-    option routers 192.168.58.1;
+    # No tenemos un router en esta red, por lo que esta opción no es necesaria
+    # option routers 192.168.58.1;
 
     zone example.test. {
         primary 192.168.58.10;
@@ -23,4 +28,3 @@ subnet 192.168.58.0 netmask 25255.255.0 {
         key ddns-key;
     }
 }
-include "/etc/dhcp/ddns.key";
